show markers with ctrl-shift-f

--- a/FindYourShit/FindYourShit.csproj
+++ b/FindYourShit/FindYourShit.csproj
@@ -51,8 +51,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomRenderManager.cs" />
     <Compile Include="Mod.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RenderMode.cs" />
     <Compile Include="SearchForSomeoneRandomPanel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
